--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,23 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Development scripts
+fix-metro.sh
+start-metro.sh
+run-ios.sh
+
+# Environment files
+.env
+.env.local
+.env.*
+
+# Claude/AI development tools
+.claude/
+claude.md
+CLAUDE.md
+
+# Sample/demo files
+pictures/
+sample-images/
+demo/
